update a indexando humans.txt

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/Invie.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Allestra" rel="stylesheet">
+		<meta name="author" content="@Davermx" />
+		<link href="humans.txt" rel="author">
 	<body>
 	
 	  <section id="Portada" class="Portada background"> <!-- Portada --> 
